<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/lin_match_vertical"
    android:focusableInTouchMode="true"
    android:paddingTop="28pt">

    <com.smart.frame.ui.view.basic.LabelEditRow
        android:id="@+id/rowNewPwd"
        style="@style/WidthFill"
        app:labelDividerIndent="30pt"
        app:labelExactlyWidth="120pt"
        app:labelHint="@string/new_pwd_hint"
        app:labelPasswordMode="true"
        app:labelText="@string/new_pwd" />

    <com.smart.frame.ui.view.basic.LabelEditRow
        android:id="@+id/rowCfmPwd"
        style="@style/WidthFill"
        android:layout_marginBottom="10pt"
        app:labelExactlyWidth="120pt"
        app:labelHint="@string/cfm_pwd_hint"
        app:labelPasswordMode="true"
        app:labelText="@string/cfm_pwd" />

    <Button
        android:id="@+id/btnComplete"
        style="@style/btn_yellow_radius"
        android:layout_margin="40pt"
        android:text="@string/complete" />
</LinearLayout>